fixed icon size on mobile header

--- a/src/modules/Header/Header.module.scss
+++ b/src/modules/Header/Header.module.scss
@@ -72,19 +72,20 @@
             }
         }
     }
-    .disabled_element {
-      opacity: 0.5;
-      cursor: not-allowed;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-        svg {
-          margin-right: 5px;
-          width: 16px;
-          height: 16px;
-        }
-    }
   }
+}
+
+.disabled_element {
+  opacity: 0.5;
+  cursor: not-allowed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    svg {
+      margin-right: 5px;
+      width: 16px;
+      height: 16px;
+    }
 }
 
 .mobile__header {
@@ -96,11 +97,14 @@
   border: none;
   background: none;
   color: white;
-  font-size: 20px;
   position: absolute;
   top: 10px;
   right: 10px;
   transition: transform 0.3s ease;
+    svg {
+      width: 20px;
+      height: 20px;
+    }
 }
 
 .mobile__menu {
@@ -111,15 +115,23 @@
   right: 10px;
   padding: 15px;
   border-radius: 15px;
-  ul {
-    list-style: none;
-    margin: 0;
-    display: grid;
-    gap: 7px;
-    li {
-      padding: 7px;
-      background: lighten(#1a17175c, 5%);
-      border-radius: 15px;
+    ul {
+      list-style: none;
+      margin: 0;
+      display: grid;
+      gap: 7px;
+      li {
+        padding: 7px;
+        background: lighten(#1a17175c, 5%);
+        border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: .4s;
+          svg {
+            width: 18px;
+            height: 18px;
+          }
+      }
     }
-  }
 }
